# dirdiff-master

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
scripts/: build_exe.ps1
